# checmk-telegram-notifications

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  graph_exception.txt  package.py  package.sh  pyproject.toml  readme.md  renovate.json  test.py  todo.md
.github/workflows/: release.yml  test.yml
cmk_addons_plugins/telegram_notify/rulesets/: notification_parameters.py
notifications/: telegram  telegram.py
tests/: conftest.py  integration_check.py  test_package.py  test_telegram.py
web/plugins/wato/: telegram_parameters.py
