[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "checkmk-notify-telegram"
version = "2.0.0"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
